--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,4 +1,4 @@
-name: Elixir CI
+name: test-format-verify
 
 on:
   push:
@@ -27,5 +27,7 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    - name: Check format
+      run: mix format --check-formatted
     - name: Run tests
       run: mix test
