Added credo & resolved outstanding warnings

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -31,3 +31,5 @@ jobs:
       run: mix format --check-formatted
     - name: Run tests
       run: mix test
+    - name: Static code analysis
+      run: mix credo -a
