--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -11,19 +11,28 @@ jobs:
 
     name: Build and test
     runs-on: ubuntu-latest
+    env:
+      elixir-version: '1.10.3' # Define the elixir version [required]
+      otp-version: '22.3' # Define the OTP version [required]
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
       uses: actions/setup-elixir@v1
       with:
-        elixir-version: '1.10.3' # Define the elixir version [required]
-        otp-version: '22.3' # Define the OTP version [required]
+        elixir-version: ${{ env.elixir-version }}
+        otp-version: ${{ env.otp-version }}
     - name: Restore dependencies cache
       uses: actions/cache@v2
       with:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+        restore-keys: ${{ runner.os }}-mix-
+    - name: Restore cached PLTs
+      uses: actions/cache@v2
+      with:
+        path: priv/plts
+        key: ${{ runner.os }}-mix-${{ env.otp-version }}-${{ env.elixir-version }}
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
@@ -31,5 +40,7 @@ jobs:
       run: mix format --check-formatted
     - name: Run tests
       run: mix test
-    - name: Static code analysis
+    - name: Credo code analysis
       run: mix credo -a
+    - name: Dialyxir code analysis
+      run: mix dialyzer
