--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -11,7 +11,8 @@ jobs:
 
     name: Build and test
     runs-on: ubuntu-latest
-    env:
+    env:                        
+      MIX_ENV: test
       elixir-version: '1.10.3' # Define the elixir version [required]
       otp-version: '22.3' # Define the OTP version [required]
 
@@ -44,3 +45,10 @@ jobs:
       run: mix credo -a
     - name: Dialyxir code analysis
       run: mix dialyzer
+    - name: Check coverage
+      run: mix coveralls.html -u -o cover
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v2
+      with:
+        name: code-coverage-report
+        path: cover/excoveralls.html
